--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
 <resources>
     <string name="name">Name</string>
     <string name="cover">cover</string>
+    <string name="heartrate">30 hp</string>
+    <string name="home">Home</string>
+    <string name="history">History</string>
+    <string name="open_navigation">open</string>
+    <string name="close_navigation">close</string>
+    <string name="Month">Sept</string> />
 </resources>
