105 : changing chart lib jjoe64 to mpandroidchart

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="close_navigation">close</string>
     <string name="Month">Sept</string>
     <string name="dashboard">Dashboard</string>
-    <string name="monthly_view">Monthy View</string>
+    <string name="monthly_view">Monthy Heartrate View</string>
     <string name="_52">52</string>
     <string name="highest_heartrate">Highest Heartrate</string>
     <string name="lowest_heartrate">Lowest HeartRate</string>
